<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mih_dbw_api_msgs</name>
  <version>0.1.0</version>
  <description>The mih_dbw_api_msgs package</description>
  <maintainer email="todo@gmail.com">TBD</maintainer>
  <author email="takamasa.horibe@tier4.jp">Takamasa Horibe</author>
  <license>TBD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
